--- a/ZeldaTheme.theme.css
+++ b/ZeldaTheme.theme.css
@@ -5,7 +5,7 @@
  * @version 0.0.1
  * @authorId 1089979929048907828
  * @website https://github.com/mvqna/ZeldaTheme
- * @updateUrl https://mwittrien.github.io/BetterDiscordAddons/Themes/BasicBackground/BasicBackground.theme.css
+ * @updateUrl https://raw.githubusercontent.com/mvqna/ZeldaTheme/main/ZeldaTheme.theme.css
  */
 
 
