--- a/ZeldaTheme.theme.css
+++ b/ZeldaTheme.theme.css
@@ -8,6 +8,7 @@
  * @updateUrl https://raw.githubusercontent.com/mvqna/ZeldaTheme/main/ZeldaTheme.theme.css
  */
 
+/*dont change anything on here if you dont know what are you doing, it could broke the theme*/
 
 
 @import url(https://raw.githubusercontent.com/mvqna/ZeldaTheme/main/ZeldaTheme.css);
